--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="navbar-brand">Profile</div>
                 </a>
 
-                <a href="https://lucasvynicius.github.io/DSMovie/">
+                <a href="project.html">
                     <div class="nav-item nav-link">project</div>
                 </a>
                 <a href="social-networks.html">
@@ -46,9 +46,9 @@
                     <br> 26 anos,
                     <br> casado com <a href="https://www.instagram.com/m.edualbuquerque/">Maria Eduarda</a>,
                     <br>  Pai de Miguel 
-
-                Sou estudante de Análise e Desenvolvimento de Sistema <br>
-                    (ADS) pela Faculdade Estácio de Sá. Gosto bastante de <br>
+                    <br>
+                    Estudante de Análise e Desenvolvimento de Sistema <br>
+                    (ADS) na Faculdade Estácio de Sá. Gosto bastante de <br>
                     aprender sobre tecnologia e programação. Atualmente <br>
                     estou no 4º período do curso de ADS e possuo <br>
                     conhecimentos sobre o paradigma de programação <br>
