--- a/index.html
+++ b/index.html
@@ -12,69 +12,56 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+    <script>
+        var assets = [];
+        function preCarregamento(){
+            
+        }
+    </script>
 
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+            <a href="">
+                <div class="navbar-brand">Home</div>
+            </a>
+
+            <a href="profile.html">
+                <div class="navbar-brand">Profile</div>
+            </a>
+
+            <a href="project.html">
+                <div class="navbar-brand">Project</div>
+            </a>
+
+            </div>
+        </nav>
+    </header>
+
     <main>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <section class="section-container">
+            <div>
+                <h1 class="h1 welcome text-center"><strong>Welcome to my first Project</strong></h1>
+            </div>
 
-                <a href="">
-                    <div class="navbar-brand">Profile</div>
-                </a>
+            <div id="dvslider">
 
-                <a href="project.html">
-                    <div class="nav-item nav-link">project</div>
-                </a>
-                <a href="social-networks.html">
-                    <div class="nav-item nav-link">Social networks</div>
-                </a>
-                </div>
-            </nav>
-        </header>
-
-        <section class="container-fluid">
-
-            <div class="container">
-                <div class="#">
-                    <img  class="img-fluid" src="assets/lucas.png" alt="lucas">
-                </div>    
-                <h1><strong>Lucas Albuquerque</strong></h1>
-                <p class="text-left">Nordestino,
-                    <br> João Pessoa-PB 
-                    <br> 26 anos,
-                    <br> casado com <a href="https://www.instagram.com/m.edualbuquerque/">Maria Eduarda</a>,
-                    <br>  Pai de Miguel 
-                    <br>
-                    Estudante de Análise e Desenvolvimento de Sistema <br>
-                    (ADS) na Faculdade Estácio de Sá. Gosto bastante de <br>
-                    aprender sobre tecnologia e programação. Atualmente <br>
-                    estou no 4º período do curso de ADS e possuo <br>
-                    conhecimentos sobre o paradigma de programação <br>
-                    orientada a objetos usando Java. Busco compreender e <br>
-                    pesquisar sempre sobre tecnologias e formas eficiente do <br>
-                    seu uso. <br><br>
-                    <strong>HABILIDADES</strong><br>
-                    M&M Micros e Redes<br>
-                    HTML 5<br>
-                    CSS<br>
-                    JAVASCRIPT<br>
-                    JAVA<br>
-                    
-                    </p>
-                </div>
-
-                <footer class="navbar navbar-dark bg-dark footer" >
-                    <p class="text-right">
-                      Autor  
-                        <a href="https://www.instagram.com/luucas_albuquerque/">Lucas Albuquerque</a>
-                    </p>
-                </footer>
+            </div>
 
         </section>
-
     </main>
+
+    <footer class="navbar navbar-dark bg-dark footer">
+        <div class=" col-sm">
+            <p class="text-center text-white">
+                Created by <a href="https://www.instagram.com/luucas_albuquerque/">Lucas Albuquerque 💻</a>
+            </p>
+        </div>
+    </footer>
+
 
 </body>
 
