--- a/project.html
+++ b/project.html
@@ -15,42 +15,64 @@
 
 </head>
 
-
-<main>
+<body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
             <a href="">
+                <div class="navbar-brand">Home</div>
+            </a>
+
+            <a href="profile.html">
                 <div class="navbar-brand">Profile</div>
             </a>
 
-            <a href="https://lucasvynicius.github.io/DSMovie/">
-                <div class="nav-item nav-link">project</div>
+            <a href="project.html">
+                <div class="navbar-brand">Project</div>
             </a>
-            <a href="social-networks.html">
-                <div class="nav-item nav-link">Social networks</div>
-            </a>
+
             </div>
         </nav>
     </header>
 
-    <section class="container-fluid">
+    <main>
+        <section class="section-container">
 
-        <div class="project-container">
-            <div class="dsmovie-container">
-                <br><br>
-                <a href="https://lucasvynicius.github.io/DSMovie/">
-                <img class="img-fluid rounded float-left dsmovie " src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k47JEUTQsSMN532HRg6RCzZKBdB.jpg" alt="">
-                <h1>DSMovie</h1>
-            </a>
+            <div class="card-container">
+                <div class="row">
+                    <div class="col-lg mb-2">
 
-            <footer class="navbar navbar-dark bg-dark footer" >
-                <p class="text-right">
-                  Instagram
-                    <a href="https://www.instagram.com/luucas_albuquerque/">Lucas Albuquerque</a>
-                </p>
-            </footer>
+                        <a href="ds-project.html">
+                            <img class="card img-fluid rounded float-left ds-card-container"
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k47JEUTQsSMN532HRg6RCzZKBdB.jpg"
+                                alt="">
+                            <h1 class="h1 text-center">DSMovie</h1>
+                        </a>
 
-    </section>
+                    </div>
+                    <div class="pj-card col-lg mb-2">
+                        <a href="rick-morty.html">
+                            <img class="card img-fluid rounded float-left rk-card-container"
+                                src="assets/rick-and-morty-4-temp1.jpg"
+                                alt="">
+                            <h1 class="h1 text-center">Rick and Morty</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-</main>
+    <footer class="navbar navbar-dark bg-dark footer">
+
+       
+        <div class=" col-sm">
+            <p class="text-center text-white">
+                Created by <a href="https://www.instagram.com/luucas_albuquerque/">Lucas Albuquerque 💻</a>
+            </p>
+        </div>
+
+    </footer>
+
+</body>
+
+</html>
