--- a/index.html
+++ b/index.html
@@ -12,18 +12,12 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <script>
-        var assets = [];
-        function preCarregamento(){
-            
-        }
-    </script>
 
 </head>
 
-<body>
+<body class="bg-dark">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
 
             <a href="">
                 <div class="navbar-brand">Home</div>
@@ -42,22 +36,25 @@
     </header>
 
     <main>
-        <section class="section-container">
-            <div>
-                <h1 class="h1 welcome text-center"><strong>Welcome to my first Project</strong></h1>
-            </div>
+        <section class="container">
 
-            <div id="dvslider">
-
+            <div class="jumbotron">
+                <p class="text-center">Hello Guys,
+                    <br> Welcome, <br>
+                    To my first Project</p>
+                <p class="text-center">
+                    <a href="https://www.instagram.com/luucas_albuquerque/"
+                        title="Lucas Albuquerque">Lucas Albuquerque</a> <br>
+                        😎 💻 <span>|</span></p>
             </div>
 
         </section>
     </main>
 
-    <footer class="navbar navbar-dark bg-dark footer">
+    <footer class="navbar navbar-dark bg-secondary footer">
         <div class=" col-sm">
             <p class="text-center text-white">
-                Created by <a href="https://www.instagram.com/luucas_albuquerque/">Lucas Albuquerque 💻</a>
+                Created by <a class="text-white" href="https://github.com/LucasVynicius">Lucas Albuquerque 💻</a>
             </p>
         </div>
     </footer>
