--- a/profile.html
+++ b/profile.html
@@ -15,9 +15,10 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
+
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
 
             <a href="index.html">
                 <div class="navbar-brand">Home</div>
@@ -44,34 +45,34 @@
                 </div>
                 <h1 class="text-center"><strong><a href="https://www.instagram.com/luucas_albuquerque/">Lucas
                             Albuquerque</a></strong></h1>
-                <p class="text-center profile-text">Nordestino, João Pessoa-PB, 26 anos, casado com <a
-                        href="https://www.instagram.com/m.edualbuquerque/">Maria Eduarda</a>,
-                    <br> pai de Miguel
-                    <br>
-                    Estudante de Análise e Desenvolvimento de Sistema <br>
-                    (ADS) na Faculdade Estácio de Sá. Gosto bastante de <br>
-                    aprender sobre tecnologia e programação. Atualmente <br>
-                    estou no 4º período do curso de ADS e possuo <br>
-                    conhecimentos sobre o paradigma de programação <br>
-                    orientada a objetos usando Java. Busco compreender e <br>
-                    pesquisar sempre sobre tecnologias e formas eficiente do <br>
-                    seu uso. <br><br>
-                    <strong>HABILIDADES</strong><br>
-                    M&M Micros e Redes<br>
-                    HTML 5 - iniciante<br>
-                    CSS - iniciante<br>
-                    JAVASCRIPT - iniciante<br>
-                    JAVA - iniciante<br>
+                <p class="text-center text-white profile-text">
+                    Brazilian, northeast, João Pessoa-PB, 26 years old, <br> married to Maria Eduarda,
+                    Miguel's father.<br>
+                    System Analysis and Development Student<br>
+                    (ADS) at the Estácio de Sá College. <br> I really like
+                    learn about technology and programming. <br> currently
+                    I am in the 4th period of the ADS course and I have<br>
+                    knowledge of the programming paradigm <br>
+                    object-oriented using Java. <br> I seek to understand and
+                    always researching technologies and efficient ways of<br>
+                    its use.
+                    <br><br>
+                    SKILLS<br>
+                    M&M Micros and Networks<br>
+                    HTML 5 - beginner<br>
+                    CSS - beginner<br>
+                    JAVASCRIPT - beginner<br>
+                    JAVA - beginner
 
                 </p>
             </div>
         </section>
     </main>
-    
-    <footer class="navbar navbar-dark bg-dark footer">
+
+    <footer class="navbar navbar-dark bg-secondary footer">
         <div class=" col-sm">
             <p class="text-center text-white">
-                Created by <a href="https://www.instagram.com/luucas_albuquerque/">Lucas Albuquerque 💻</a>
+               Created by <a class="text-white" href="https://github.com/LucasVynicius">Lucas Albuquerque 💻</a>
             </p>
         </div>
     </footer>
