--- a/project.html
+++ b/project.html
@@ -15,11 +15,11 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
 
-            <a href="">
+            <a href="index.html">
                 <div class="navbar-brand">Home</div>
             </a>
 
@@ -42,8 +42,8 @@
                 <div class="row">
                     <div class="col-lg mb-2">
 
-                        <a href="ds-project.html">
-                            <img class="card img-fluid rounded float-left ds-card-container"
+                        <a href="dsmovie-project.html">
+                            <img class="img-fluid rounded mx-auto float-left ds-card-container"
                                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k47JEUTQsSMN532HRg6RCzZKBdB.jpg"
                                 alt="">
                             <h1 class="h1 text-center">DSMovie</h1>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="pj-card col-lg mb-2">
                         <a href="rick-morty.html">
-                            <img class="card img-fluid rounded float-left rk-card-container"
+                            <img class="img-fluid rounded mx-autork-card-container"
                                 src="assets/rick-and-morty-4-temp1.jpg"
                                 alt="">
                             <h1 class="h1 text-center">Rick and Morty</h1>
@@ -62,12 +62,12 @@
         </section>
     </main>
 
-    <footer class="navbar navbar-dark bg-dark footer">
+    <footer class="navbar navbar-dark bg-secondary footer">
 
        
         <div class=" col-sm">
             <p class="text-center text-white">
-                Created by <a href="https://www.instagram.com/luucas_albuquerque/">Lucas Albuquerque 💻</a>
+                Created by <a class="text-white" href="https://github.com/LucasVynicius">Lucas Albuquerque 💻</a>
             </p>
         </div>
 
