--- a/rick-morty.html
+++ b/rick-morty.html
@@ -30,10 +30,6 @@
                 <div class="navbar-brand">Profile</div>
             </a>
 
-            <a href="project.html">
-                <div class="nav-item nav-link">project</div>
-            </a>
-
             </div>
         </nav>
     </header>
@@ -83,7 +79,7 @@
     <footer class="navbar navbar-dark bg-dark footer">
         <div class=" col-sm">
             <p class="text-center text-white">
-                Created by <a href="https://www.instagram.com/luucas_albuquerque/">Lucas Albuquerque 💻</a>
+                Created by <a href="https://github.com/LucasVynicius">Lucas Albuquerque 💻</a>
             </p>
         </div>
     </footer>
